--- a/dEntertainment.html
+++ b/dEntertainment.html
@@ -18,7 +18,7 @@
     .div-contents {
         margin-right: auto !important;
         margin-left: auto !important;
-        /* margin-top: -7% !important; */
+        margin-top: -4% !important;
         padding: 0 !important;
     }
 
@@ -60,7 +60,7 @@
     }
 
     .list-group-item-action:active {
-        background: #f9f9f9;
+        background: #f9f9f9;    
     }
 
     .list-group-item-action {
@@ -111,7 +111,7 @@
             text-align: center;
             padding: 2% 0 !important;
             z-index: 999 !important;
-            margin: -4% 0 !important;
+            margin: -3% 0 !important;
             height: 130px !important;
         }
     }
@@ -126,8 +126,8 @@
         text-align: center;
         padding: 2% 0 !important;
         z-index: 999 !important;
-        margin: -4% 0 !important;
-        height: 130px !important;
+        margin: -1% 0 !important;
+        height: 135px !important;
     }
 
     .mxt-60 {
