--- a/dEntertainment.html
+++ b/dEntertainment.html
@@ -109,25 +109,26 @@
             background-color: #fff !important;
             color: #000;
             text-align: center;
-            padding: 2% 0 !important;
+            padding: 6% 0 !important;
             z-index: 999 !important;
-            margin: -3% 0 !important;
-            height: 130px !important;
+            /* margin: -3% 0 !important; */
+            height: 115px !important;
         }
     }
-
+    @media(max-width: 374px){
     .div-df {
         position: fixed !important;
-        left: 0;
-        bottom: -10.5%;
-        width: 100%;
-        background-color: #fff;
-        color: #000 !important;
-        text-align: center;
-        padding: 2% 0 !important;
-        z-index: 999 !important;
-        margin: -1% 0 !important;
-        height: 135px !important;
+            left: 0;
+            bottom: -7% !important;
+            width: 100%;
+            background-color: #fff !important;
+            color: #000;
+            text-align: center;
+            padding: 6% 0 !important;
+            z-index: 999 !important;
+            margin: -3% 0 !important;
+            height: 115px !important;
+    }
     }
 
     .mxt-60 {
