--- a/dEntertainment.html
+++ b/dEntertainment.html
@@ -111,7 +111,7 @@
             text-align: center;
             padding: 6% 0 !important;
             z-index: 999 !important;
-            /* margin: -3% 0 !important; */
+            margin: -% 0 !important;
             height: 115px !important;
         }
     }
