--- a/dEntertainment.html
+++ b/dEntertainment.html
@@ -111,8 +111,8 @@
             text-align: center;
             padding: 6% 0 !important;
             z-index: 999 !important;
-            margin: -% 0 !important;
-            height: 115px !important;
+            margin: 0% 0 !important;
+            height: 120px !important;
         }
     }
     @media(max-width: 374px){
