--- a/dryrationsFooter.html
+++ b/dryrationsFooter.html
@@ -156,7 +156,7 @@
         <div class="div-df div-df-sm">
             <div style="margin-top: -5px !important; margin-bottom: 8px !important;">
                 <div class="col-xs-4 div-contents" style="font-family: 'Montserrat', sans-serif !important; cursor: pointer;">
-                    <a href="https://www.daraz.lk/wow/camp/daraz/megascenario/lk/campaign/fresh-vegetable-and-dry-rations?hybrid=1"
+                    <a href="https://www.daraz.lk/wow/camp/daraz/megascenario/lk/campaign/essential-bundles-april?hybrid=1"
                     style="text-decoration: none !important;">
                         <img class="div-img" src="https://gw.alicdn.com/tfs/TB15pQSCoT1gK0jSZFrXXcNCXXa-80-80.png">
                             <span
@@ -165,20 +165,20 @@
                 </div>
                 <div class="col-xs-4 div-contents"
                     style="font-family: 'Montserrat', sans-serif !important; cursor: pointer;">
-                    <a href="https://www.daraz.lk/wow/camp/daraz/megascenario/lk/campaign/essential-bundles-april?hybrid=1"
+                    <a href="https://www.daraz.lk/wow/camp/daraz/megascenario/lk/campaign/fresh-vegetable-and-dry-rations?hybrid=1"
                         style="text-decoration: none !important;">
                         <img class="div-img" src="https://gw.alicdn.com/tfs/TB1B26PCq61gK0jSZFlXXXDKFXa-80-80.png">
                         <span
-                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;">Dryration Bundles</span>
+                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;">Dry Ration Bundles</span>
                     </a>
                 </div>
                 <div class="col-xs-4 div-contents"
                     style="font-family: 'Montserrat', sans-serif !important; cursor: pointer;">
-                    <a href="https://www.daraz.lk/wow/camp/daraz/megascenario/lk/campaign/game-zone?hybrid=1"
+                    <a href="https://www.daraz.lk/wow/camp/daraz/megascenario/lk/campaign/play-while-you-stay-home?hybrid=1"
                         style="text-decoration: none !important;">
                         <img class="div-img" src="https://gw.alicdn.com/tfs/TB1voIaAAT2gK0jSZFkXXcIQFXa-80-80.png">
                         <span
-                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;">Game Zone</span>
+                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;">Play Zone</span>
                     </a>
                 </div>
             </div>
