--- a/dryrationsFooter.html
+++ b/dryrationsFooter.html
@@ -160,7 +160,7 @@
                     style="text-decoration: none !important;">
                         <img class="div-img" src="https://gw.alicdn.com/tfs/TB15pQSCoT1gK0jSZFrXXcNCXXa-80-80.png">
                             <span
-                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;">Bundle Essentials</span>
+                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;text-transform: initial !important;">Bundle Essentials</span>
                     </a>
                 </div>
                 <div class="col-xs-4 div-contents"
@@ -169,7 +169,7 @@
                         style="text-decoration: none !important;">
                         <img class="div-img" src="https://gw.alicdn.com/tfs/TB1B26PCq61gK0jSZFlXXXDKFXa-80-80.png">
                         <span
-                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;">Dry Ration Bundles</span>
+                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;text-transform: initial !important;">Dry Ration Bundles</span>
                     </a>
                 </div>
                 <div class="col-xs-4 div-contents"
@@ -178,7 +178,7 @@
                         style="text-decoration: none !important;">
                         <img class="div-img" src="https://gw.alicdn.com/tfs/TB1voIaAAT2gK0jSZFkXXcIQFXa-80-80.png">
                         <span
-                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;">Play Zone</span>
+                            style="cursor:pointer;font-size: 11px;text-decoration: none !important;color: #000 !important; display: block;text-transform: initial !important;">Play Zone</span>
                     </a>
                 </div>
             </div>
